{
    "name": "InputBinds",
    "maps": [
        {
            "name": "Character",
            "id": "e8fc03ca-239f-4654-ad81-b90fec170d2d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "baef648b-4179-4612-8ae7-366a396c82cf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "1027ad0b-3188-44b1-80a6-71c7fe3b5878",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeCharacterToTriangle",
                    "type": "Button",
                    "id": "7b4fc2ba-fff2-4093-88fd-6a2419252c8e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeCharacterToSquare",
                    "type": "Button",
                    "id": "b37e9e7b-6c89-4ff7-807e-1603eda0d60f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeCharacterToPentagon",
                    "type": "Button",
                    "id": "b4bdd395-8970-484f-ba31-73e2d4df0a42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeCharacterToOctagon",
                    "type": "Button",
                    "id": "020e95ef-0bcf-46f0-ab42-a680834d6caf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "1f2abe45-49b5-4b4c-a161-9f9ae581b1f4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "68aca178-996d-4341-bf1f-68c5e37a38a5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e20b802-3ad3-4449-9fd3-9db1254bf404",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "ChangeCharacterToTriangle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f187424b-ecf1-4039-adf7-aa472cb409e1",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "ChangeCharacterToSquare",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f2aad35-73da-4722-94aa-6a96536162e0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "ChangeCharacterToPentagon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1baf009e-9d6d-4a27-9179-1b3563c749bf",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "ChangeCharacterToOctagon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "707de6d9-5485-42a5-bbaf-45fa9a64a0d4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "316c1120-2c87-4f2e-a394-7fb4b0cc2c3e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3a248a0a-bc32-4fa1-8b32-8383b92e776f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "973646cc-394e-488b-ab31-dd7ab8813d0f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e16a6632-5309-49a8-8ffc-5b59b3de95de",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b6520a14-781f-4ae5-acde-a86351f6246a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard ",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and keyboard ",
            "bindingGroup": "Mouse and keyboard ",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}